--- a/index.html
+++ b/index.html
@@ -7,5 +7,12 @@
 
 <p>Welcome to Pavan's Board Game Reviews</p>
 
+<ul>
+  <li>Terra Mystica</li>
+  <li>Mysterium</li>
+  <li>Takenoko</li>
+  <li>Pandemic</li>
+</ul>
+
 </body>
 </html>
