DLed images and added relative link from index page

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 <p>Welcome to Pavan's Board Game Reviews</p>
 
 <ul>
-  <li>Terra Mystica</li>
-  <li>Mysterium</li>
-  <li>Takenoko</li>
-  <li>Pandemic</li>
+  <li><a href="pages/terramystica.html">Terra Mystica</a></li>
+  <li><a href="pages/mysterium.html">Mysterium</a></li>
+  <li><a href="pages/takenoko.html">Takenoko</a></li>
+  <li><a href="pages/pandemic.html">Pandemic</a></li>
 </ul>
 
 </body>
