Added publisher and review info

--- a/pages/mysterium.html
+++ b/pages/mysterium.html
@@ -7,13 +7,34 @@
 
 <h1>Mysterium Review</h1>
 
-<img src="../images/mysterium.jpeg">
+<img src="../images/mysterium.jpeg" alt="Mysterium">
 
-<table>
+<section>
+
+<h3>Details</h3>
+
+<table border=1>
   <tr>
+  <td>Release</td>
+  <td>Players</td>
+  <td>Publisher</td>
   </tr>
 
+  <tr>
+    <td>2015</td>
+    <td>2-5</td>
+    <td>Asmodee</td>
+  </tr>
 </table>
+
+</section>
+
+<section>
+
+  <h2>Review</h2>
+
+  <p>This is an incredibly interesting game.</p>
+</section>
 
 
 </body>
