--- a/pages/takenoko.html
+++ b/pages/takenoko.html
@@ -7,13 +7,35 @@
 
 <h1>Takenoko Review</h1>
 
-<img src="../images/takenoko.jpeg">
+<img src="../images/takenoko.jpeg" alt="Takenoko">
 
-<table>
+<section>
+
+<h3>Details</h3>
+
+<table border=1>
   <tr>
+  <td>Release</td>
+  <td>Players</td>
+  <td>Publisher</td>
   </tr>
 
+  <tr>
+    <td>2011</td>
+    <td>2-4</td>
+    <td>Asmodee</td>
+  </tr>
 </table>
+
+</section>
+
+<section>
+
+  <h2>Review</h2>
+
+  <p>This is a fun game.</p>
+</section>
+
 
 
 </body>
