--- a/pages/pandemic.html
+++ b/pages/pandemic.html
@@ -7,13 +7,35 @@
 
 <h1>Pandemic Review</h1>
 
-<img src="../images/Pandemic.jpeg">
+<img src="../images/Pandemic.jpeg" alt="Pandemic">
 
-<table>
+<section>
+
+<h3>Details</h3>
+
+<table border=1>
   <tr>
+  <td>Release</td>
+  <td>Players</td>
+  <td>Publisher</td>
   </tr>
 
+  <tr>
+    <td>2008</td>
+    <td>2-4</td>
+    <td>Z-Man Games</td>
+  </tr>
 </table>
+
+</section>
+
+<section>
+
+  <h2>Review</h2>
+
+  <p>This is a great cooperative game.</p>
+</section>
+
 
 
 </body>
