--- a/pages/terramystica.html
+++ b/pages/terramystica.html
@@ -7,13 +7,35 @@
 
 <h1>Terra Mystica Review</h1>
 
-<img src="../images/terramystica.jpeg">
+<img src="../images/terramystica.jpeg" alt="Terra Mystica">
 
-<table>
+<section>
+
+<h3>Details</h3>
+
+<table border=1>
   <tr>
+  <td>Release</td>
+  <td>Players</td>
+  <td>Publisher</td>
   </tr>
 
+  <tr>
+    <td>2012</td>
+    <td>2-5</td>
+    <td>Z-Man Games</td>
+  </tr>
 </table>
+
+</section>
+
+<section>
+
+  <h2>Review</h2>
+
+  <p>This is a challenging game.</p>
+</section>
+
 
 
 </body>
