--- a/index.html
+++ b/index.html
@@ -5,14 +5,18 @@
 </head>
 <body>
 
-<p>Welcome to Pavan's Board Game Reviews</p>
+<marquee behavior="scroll" direction="left"><h1>Welcome to Pavan's Board Game Reviews</h1>
+</marquee>
 
+<section>
+<h2>Current Reviews</h2>
 <ul>
   <li><a href="pages/terramystica.html">Terra Mystica</a></li>
   <li><a href="pages/mysterium.html">Mysterium</a></li>
   <li><a href="pages/takenoko.html">Takenoko</a></li>
   <li><a href="pages/pandemic.html">Pandemic</a></li>
 </ul>
+</section>
 
 </body>
 </html>
