fixed image links

--- a/pages/terramystica.html
+++ b/pages/terramystica.html
@@ -8,7 +8,7 @@
 <h1>Terra Mystica Review</h1>
 
 
-<img src="../images/terramystica.jpeg" alt="Terra Mystica">
+<img src="../images/TerraMystica.jpeg" alt="Terra Mystica">
 
 <section>
 
