--- a/pages/mysterium.html
+++ b/pages/mysterium.html
@@ -7,7 +7,7 @@
 
 <h1>Mysterium Review</h1>
 
-<img src="../images/mysterium.jpeg" alt="Mysterium">
+<img src="../images/Mysterium.jpeg" alt="Mysterium">
 
 <section>
 
