--- a/pages/takenoko.html
+++ b/pages/takenoko.html
@@ -7,7 +7,7 @@
 
 <h1>Takenoko Review</h1>
 
-<img src="../images/takenoko.jpeg" alt="Takenoko">
+<img src="../images/Takenoko.jpeg" alt="Takenoko">
 
 <section>
 
