Add comment form and success page

--- a/index.html
+++ b/index.html
@@ -18,5 +18,15 @@
 </ul>
 </section>
 
+<div>
+<form action=pages/success.html method="get">
+  <textarea name="Comment" rows=5 cols=20>Please add any comments you have here</textarea><br>
+
+  <input type="submit" name="submit" value="Submit">
+
+</form>
+
+</div>
+
 </body>
 </html>
