--- a/index.html
+++ b/index.html
@@ -25,8 +25,11 @@
   <input type="submit" name="submit" value="Submit">
 
 </form>
-
 </div>
+
+<div>
+<p><a href="https://www.shutupandsitdown.com/">My favorite board game review website.</a><br>
+<font size="2">I like that basic html is used for a lot of the text and that the website is a mix between text and graphics.  There is a lot of CSS styling and other things we haven't learned yet that I can't judge.</font></p>
 
 </body>
 </html>
