clean up code and formatting

--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
 </head>
 <body>
 
-<marquee behavior="scroll" direction="left"><h1>Welcome to Pavan's Board Game Reviews</h1>
-</marquee>
+<section>
+<h1>Welcome to Pavan's Board Game Reviews</h1>
+</section>
 
 <section>
 <h2>Current Reviews</h2>
@@ -29,7 +30,9 @@
 
 <div>
 <p><a href="https://www.shutupandsitdown.com/">My favorite board game review website.</a><br>
-<font size="2">I like that basic html is used for a lot of the text and that the website is a mix between text and graphics.  There is a lot of CSS styling and other things we haven't learned yet that I can't judge.</font></p>
+I like that basic html is used for a lot of the text and that the website is a mix between text and graphics.  There is a lot of CSS styling and other things we haven't learned yet that I can't judge.
+</p>
+</div>
 
 </body>
 </html>
