--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Pavan's Board Game Reviews</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 
