--- a/pages/terramystica.html
+++ b/pages/terramystica.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Pavan's Terra Mystica Review</title>
+  <link rel="stylesheet" type="text/css" href="../style.css">
 </head>
 <body>
 
