Complete requirements of 3.5

--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Pavan's Board Game Reviews</title>
+  <title class="title">Pavan's Board Game Reviews</title>
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 
 <section>
-<h1>Welcome to Pavan's Board Game Reviews</h1>
+<h1 id="header">Welcome to Pavan's Board Game Reviews</h1>
 </section>
 
 <section>
@@ -15,25 +15,24 @@
 <ul>
   <li><a href="pages/terramystica.html">Terra Mystica</a></li>
   <li><a href="pages/mysterium.html">Mysterium</a></li>
-  <li><a href="pages/takenoko.html">Takenoko</a></li>
   <li><a href="pages/pandemic.html">Pandemic</a></li>
 </ul>
 </section>
 
-<div>
+<div id="form">
 <form action=pages/success.html method="get">
-  <textarea name="Comment" rows=5 cols=20>Please add any comments you have here</textarea><br>
+  <textarea name="Comment" rows=2 cols=20>Please add any comments you have here</textarea><br>
 
   <input type="submit" name="submit" value="Submit">
 
 </form>
 </div>
 
-<div>
-<p><a href="https://www.shutupandsitdown.com/">My favorite board game review website.</a><br>
-I like that basic html is used for a lot of the text and that the website is a mix between text and graphics.  There is a lot of CSS styling and other things we haven't learned yet that I can't judge.
-</p>
-</div>
+
+<footer>
+  <p>Created by: Pavan Sarguru</p>
+  <p>Contact info: <a href="mailto:someone@example.com">someone@example.com</a></p>
+</footer>
 
 </body>
 </html>
