--- a/pages/mysterium.html
+++ b/pages/mysterium.html
@@ -6,15 +6,19 @@
 </head>
 <body>
 
-<h1>Mysterium Review</h1>
-
-<img src="../images/Mysterium.jpeg" alt="Mysterium">
-
 <section>
+<h1 id="header"><a href="../index.html">Welcome to Pavan's Board Game Reviews</a></h1>
+</section>
 
-<h3>Details</h3>
+<h1 class="title">Mysterium Review</h1>
 
-<table border=1>
+<img id="image" src="../images/Mysterium.jpeg" alt="Mysterium">
+
+<section id="details">
+
+<h3 class="title">Details</h3>
+
+<table id="table">
   <tr>
   <td>Release</td>
   <td>Players</td>
@@ -30,11 +34,14 @@
 
 </section>
 
-<section>
+<section class="review">
 
-  <h2>Review</h2>
+  <h2 class="title">Review</h2>
 
-  <p>This is an incredibly interesting game.</p>
+<p>
+  Lorem ipsum dolor sit amet, varius justo sollicitudin feugiat sit, arcu litora vestibulum ante suscipit, vivamus velit velit id sed suspendisse. Risus amet odio mollis inceptos laoreet id, nec sagittis sed urna ac in lorem. Congue ac leo purus donec ante rhoncus, libero quisque tempor sed, erat sed nunc sed neque tincidunt. Ac ac varius suspendisse malesuada sed tellus, consequat lectus vestibulum occaecat morbi, a eu vivamus perspiciatis amet aliquam, volutpat sit posuere ac urna eu, posuere turpis elit. Nulla tellus vel. Vel donec luctus diam elit consectetuer justo, integer integer elit dui lectus metus tristique, mauris dictum donec ultrices, curae ut magna. Blandit magna pellentesque amet vitae ultricies, quis malesuada mauris nulla elementum, praesent tortor rutrum vulputate eu ante nulla, pellentesque auctor mauris sed, et proin rutrum. Interdum nisl tincidunt vitae, curabitur lectus convallis congue, nibh tempor suspendisse id vestibulum, risus iaculis, pretium odio sem sed. Vel eleifend id a imperdiet, vestibulum et, sed vivamus fames convallis sed quis nec, felis ornare mollis varius maecenas.
+  </p>
+
 </section>
 
 
