Change front pages link to tiles

--- a/index.html
+++ b/index.html
@@ -10,23 +10,30 @@
 <h1 id="header">Welcome to Pavan's Board Game Reviews</h1>
 </section>
 
+<main>
 <section>
 <h2>Current Reviews</h2>
-<ul>
-  <li><a href="pages/terramystica.html">Terra Mystica</a></li>
-  <li><a href="pages/mysterium.html">Mysterium</a></li>
-  <li><a href="pages/pandemic.html">Pandemic</a></li>
-</ul>
+
+<div id="review_tiles">
+  <a href="pages/terramystica.html"><img src="images/terramystica.jpeg"></a>
+  <a href="pages/mysterium.html"><img src="images/mysterium.jpeg"></a>
+  <a href="pages/pandemic.html"><img src="images/pandemic.jpeg"></a>
+</div>
+
 </section>
 
+<p><h2>I'm always looking for ideas on games to review:</h2></p>
+
 <div id="form">
+<p>
 <form action=pages/success.html method="get">
-  <textarea name="Comment" rows=2 cols=20>Please add any comments you have here</textarea><br>
+  <textarea name="Comment" rows=2 cols=20>Any Suggestions?</textarea><br>
 
   <input type="submit" name="submit" value="Submit">
-
 </form>
+</p>
 </div>
+</main>
 
 
 <footer>
