test font effect

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 <h2>Current Reviews</h2>
 
 <div id="review_tiles">
-  <a href="pages/terramystica.html"><img src="images/terramystica.jpeg"></a>
-  <a href="pages/mysterium.html"><img src="images/mysterium.jpeg"></a>
-  <a href="pages/pandemic.html"><img src="images/pandemic.jpeg"></a>
+  <a href="pages/terramystica.html"><img src="images/TerraMystica.jpeg"></a>
+  <a href="pages/mysterium.html"><img src="images/Mysterium.jpeg"></a>
+  <a href="pages/pandemic.html"><img src="images/Pandemic.jpeg"></a>
 </div>
 
 </section>
