fix minor issues

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 </head>
 <body>
 
-<section>
-<h1 id="header">Welcome to Pavan's Board Game Reviews</h1>
-</section>
+<header>
+<h1><a href="index.html">Welcome to Pavan's Board Game Reviews</a></h1>
+</header>
 
 <main>
 <section>
