--- a/pages/mysterium.html
+++ b/pages/mysterium.html
@@ -6,9 +6,9 @@
 </head>
 <body>
 
-<section>
-<h1 id="header"><a href="../index.html">Welcome to Pavan's Board Game Reviews</a></h1>
-</section>
+<header>
+<h1><a href="../index.html">Welcome to Pavan's Board Game Reviews</a></h1>
+</header>
 
 <h1 class="title">Mysterium Review</h1>
 
